MiniL/y.output
Terminals unused in grammar

   WRITE


Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | function program

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS declaration SEMICOLON END_PARAMS BEGIN_LOCALS declaration SEMICOLON END_LOCALS BEGIN_BODY statement SEMICOLON END_BODY

    4 declaration: /* empty */
    5            | ID comma COLON array INTERGER SEMICOLON declaration

    6 comma: /* empty */
    7      | COMMA ID comma

    8 array: /* empty */
    9      | ARRAY L_BRAC NUMBER R_BRAC OF

   10 statement: /* empty */
   11          | var ASSIGN
   12          | IF bool_expr THEN statement SEMICOLON more_statement else ENDIF
   13          | WHILE bool_expr BEGINLOOP statement SEMICOLON more_statement ENDLOOP
   14          | DO BEGINLOOP statement SEMICOLON more_statement ENDLOOP WHILE bool_expr
   15          | READ var var_comma
   16          | CONTINUE
   17          | RETURN expression

   18 more_statement: /* empty */
   19               | statement SEMICOLON more_statement

   20 bool_expr: relation_and_expr more_bool_expr

   21 relation_and_expr: relation_expr more_relation_and_expr

   22 more_bool_expr: /* empty */
   23               | OR relation_and_expr more_bool_expr

   24 more_relation_and_expr: /* empty */
   25                       | AND relation_expr more_relation_and_expr

   26 relation_expr: NOT more_relation_expr
   27              | more_relation_expr

   28 more_relation_expr: expression compare expression
   29                   | TRUE
   30                   | FALSE
   31                   | L_PARENT bool_expr R_PARENT

   32 expression: multiplicative_expr more_expression

   33 compare: EQ
   34        | NEQ
   35        | LT
   36        | GT
   37        | LTE
   38        | GTE

   39 more_expression: /* empty */
   40                | ADD multiplicative_expr more_expression
   41                | SUB multiplicative_expr more_expression

   42 multiplicative_expr: term more_multiplicative_expr

   43 more_multiplicative_expr: /* empty */
   44                         | TIMES term more_multiplicative_expr
   45                         | DIV term more_multiplicative_expr
   46                         | MOD term more_multiplicative_expr

   47 term: SUB var
   48     | NUMBER
   49     | L_PARENT expression R_PARENT
   50     | ID L_PARENT term_expr term_comma R_PARENT

   51 term_expr: /* empty */
   52          | expression

   53 term_comma: /* empty */
   54           | COMMA expression term_comma

   55 else: /* empty */
   56     | ELSE statement SEMICOLON more_statement

   57 var: ID more_var

   58 more_var: /* empty */
   59         | L_BRAC expression R_BRAC

   60 var_comma: /* empty */
   61          | COMMA var var_comma


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 9 48
ID (259) 3 5 7 50 57
L_PARENT (260) 31 49 50
R_PARENT (261) 31 49 50
L_BRAC (262) 9 59
R_BRAC (263) 9 59
SUB (264) 41 47
SEMICOLON (265) 3 5 12 13 14 19 56
COLON (266) 5
COMMA (267) 7 54 61
TIMES (268) 44
DIV (269) 45
MOD (270) 46
ADD (271) 40
LT (272) 35
LTE (273) 37
GT (274) 36
GTE (275) 38
EQ (276) 33
NEQ (277) 34
NOT (278) 26
AND (279) 25
OR (280) 23
ASSIGN (281) 11
FUNCTION (282) 3
BEGIN_PARAMS (283) 3
END_PARAMS (284) 3
BEGIN_LOCALS (285) 3
END_LOCALS (286) 3
BEGIN_BODY (287) 3
END_BODY (288) 3
INTERGER (289) 5
ARRAY (290) 9
OF (291) 9
IF (292) 12
THEN (293) 12
ENDIF (294) 12
ELSE (295) 56
TRUE (296) 29
FALSE (297) 30
WHILE (298) 13 14
DO (299) 14
BEGINLOOP (300) 13 14
ENDLOOP (301) 13 14
CONTINUE (302) 16
READ (303) 15
WRITE (304)
RETURN (305) 17


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1 2, on right: 0 2
function (53)
    on left: 3, on right: 2
declaration (54)
    on left: 4 5, on right: 3 5
comma (55)
    on left: 6 7, on right: 5 7
array (56)
    on left: 8 9, on right: 5
statement (57)
    on left: 10 11 12 13 14 15 16 17, on right: 3 12 13 14 19 56
more_statement (58)
    on left: 18 19, on right: 12 13 14 19 56
bool_expr (59)
    on left: 20, on right: 12 13 14 31
relation_and_expr (60)
    on left: 21, on right: 20 23
more_bool_expr (61)
    on left: 22 23, on right: 20 23
more_relation_and_expr (62)
    on left: 24 25, on right: 21 25
relation_expr (63)
    on left: 26 27, on right: 21 25
more_relation_expr (64)
    on left: 28 29 30 31, on right: 26 27
expression (65)
    on left: 32, on right: 17 28 49 52 54 59
compare (66)
    on left: 33 34 35 36 37 38, on right: 28
more_expression (67)
    on left: 39 40 41, on right: 32 40 41
multiplicative_expr (68)
    on left: 42, on right: 32 40 41
more_multiplicative_expr (69)
    on left: 43 44 45 46, on right: 42 44 45 46
term (70)
    on left: 47 48 49 50, on right: 42 44 45 46
term_expr (71)
    on left: 51 52, on right: 50
term_comma (72)
    on left: 53 54, on right: 50 54
else (73)
    on left: 55 56, on right: 12
var (74)
    on left: 57, on right: 11 15 47 61
more_var (75)
    on left: 58 59, on right: 57
var_comma (76)
    on left: 60 61, on right: 15 61


State 0

    0 $accept: . program $end

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program   go to state 2
    function  go to state 3


State 1

    3 function: FUNCTION . ID SEMICOLON BEGIN_PARAMS declaration SEMICOLON END_PARAMS BEGIN_LOCALS declaration SEMICOLON END_LOCALS BEGIN_BODY statement SEMICOLON END_BODY

    ID  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    2 program: function . program

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program   go to state 6
    function  go to state 3


State 4

    3 function: FUNCTION ID . SEMICOLON BEGIN_PARAMS declaration SEMICOLON END_PARAMS BEGIN_LOCALS declaration SEMICOLON END_LOCALS BEGIN_BODY statement SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 7


State 5

    0 $accept: program $end .

    $default  accept


State 6

    2 program: function program .

    $default  reduce using rule 2 (program)


State 7

    3 function: FUNCTION ID SEMICOLON . BEGIN_PARAMS declaration SEMICOLON END_PARAMS BEGIN_LOCALS declaration SEMICOLON END_LOCALS BEGIN_BODY statement SEMICOLON END_BODY

    BEGIN_PARAMS  shift, and go to state 8


State 8

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS . declaration SEMICOLON END_PARAMS BEGIN_LOCALS declaration SEMICOLON END_LOCALS BEGIN_BODY statement SEMICOLON END_BODY

    ID  shift, and go to state 9

    $default  reduce using rule 4 (declaration)

    declaration  go to state 10


State 9

    5 declaration: ID . comma COLON array INTERGER SEMICOLON declaration

    COMMA  shift, and go to state 11

    $default  reduce using rule 6 (comma)

    comma  go to state 12


State 10

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS declaration . SEMICOLON END_PARAMS BEGIN_LOCALS declaration SEMICOLON END_LOCALS BEGIN_BODY statement SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 13


State 11

    7 comma: COMMA . ID comma

    ID  shift, and go to state 14


State 12

    5 declaration: ID comma . COLON array INTERGER SEMICOLON declaration

    COLON  shift, and go to state 15


State 13

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS declaration SEMICOLON . END_PARAMS BEGIN_LOCALS declaration SEMICOLON END_LOCALS BEGIN_BODY statement SEMICOLON END_BODY

    END_PARAMS  shift, and go to state 16


State 14

    7 comma: COMMA ID . comma

    COMMA  shift, and go to state 11

    $default  reduce using rule 6 (comma)

    comma  go to state 17


State 15

    5 declaration: ID comma COLON . array INTERGER SEMICOLON declaration

    ARRAY  shift, and go to state 18

    $default  reduce using rule 8 (array)

    array  go to state 19


State 16

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS declaration SEMICOLON END_PARAMS . BEGIN_LOCALS declaration SEMICOLON END_LOCALS BEGIN_BODY statement SEMICOLON END_BODY

    BEGIN_LOCALS  shift, and go to state 20


State 17

    7 comma: COMMA ID comma .

    $default  reduce using rule 7 (comma)


State 18

    9 array: ARRAY . L_BRAC NUMBER R_BRAC OF

    L_BRAC  shift, and go to state 21


State 19

    5 declaration: ID comma COLON array . INTERGER SEMICOLON declaration

    INTERGER  shift, and go to state 22


State 20

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS declaration SEMICOLON END_PARAMS BEGIN_LOCALS . declaration SEMICOLON END_LOCALS BEGIN_BODY statement SEMICOLON END_BODY

    ID  shift, and go to state 9

    $default  reduce using rule 4 (declaration)

    declaration  go to state 23


State 21

    9 array: ARRAY L_BRAC . NUMBER R_BRAC OF

    NUMBER  shift, and go to state 24


State 22

    5 declaration: ID comma COLON array INTERGER . SEMICOLON declaration

    SEMICOLON  shift, and go to state 25


State 23

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS declaration SEMICOLON END_PARAMS BEGIN_LOCALS declaration . SEMICOLON END_LOCALS BEGIN_BODY statement SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 26


State 24

    9 array: ARRAY L_BRAC NUMBER . R_BRAC OF

    R_BRAC  shift, and go to state 27


State 25

    5 declaration: ID comma COLON array INTERGER SEMICOLON . declaration

    ID  shift, and go to state 9

    $default  reduce using rule 4 (declaration)

    declaration  go to state 28


State 26

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS declaration SEMICOLON END_PARAMS BEGIN_LOCALS declaration SEMICOLON . END_LOCALS BEGIN_BODY statement SEMICOLON END_BODY

    END_LOCALS  shift, and go to state 29


State 27

    9 array: ARRAY L_BRAC NUMBER R_BRAC . OF

    OF  shift, and go to state 30


State 28

    5 declaration: ID comma COLON array INTERGER SEMICOLON declaration .

    $default  reduce using rule 5 (declaration)


State 29

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS declaration SEMICOLON END_PARAMS BEGIN_LOCALS declaration SEMICOLON END_LOCALS . BEGIN_BODY statement SEMICOLON END_BODY

    BEGIN_BODY  shift, and go to state 31


State 30

    9 array: ARRAY L_BRAC NUMBER R_BRAC OF .

    $default  reduce using rule 9 (array)


State 31

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS declaration SEMICOLON END_PARAMS BEGIN_LOCALS declaration SEMICOLON END_LOCALS BEGIN_BODY . statement SEMICOLON END_BODY

    ID        shift, and go to state 32
    IF        shift, and go to state 33
    WHILE     shift, and go to state 34
    DO        shift, and go to state 35
    CONTINUE  shift, and go to state 36
    READ      shift, and go to state 37
    RETURN    shift, and go to state 38

    $default  reduce using rule 10 (statement)

    statement  go to state 39
    var        go to state 40


State 32

   57 var: ID . more_var

    L_BRAC  shift, and go to state 41

    $default  reduce using rule 58 (more_var)

    more_var  go to state 42


State 33

   12 statement: IF . bool_expr THEN statement SEMICOLON more_statement else ENDIF

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 45
    SUB       shift, and go to state 46
    NOT       shift, and go to state 47
    TRUE      shift, and go to state 48
    FALSE     shift, and go to state 49

    bool_expr            go to state 50
    relation_and_expr    go to state 51
    relation_expr        go to state 52
    more_relation_expr   go to state 53
    expression           go to state 54
    multiplicative_expr  go to state 55
    term                 go to state 56


State 34

   13 statement: WHILE . bool_expr BEGINLOOP statement SEMICOLON more_statement ENDLOOP

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 45
    SUB       shift, and go to state 46
    NOT       shift, and go to state 47
    TRUE      shift, and go to state 48
    FALSE     shift, and go to state 49

    bool_expr            go to state 57
    relation_and_expr    go to state 51
    relation_expr        go to state 52
    more_relation_expr   go to state 53
    expression           go to state 54
    multiplicative_expr  go to state 55
    term                 go to state 56


State 35

   14 statement: DO . BEGINLOOP statement SEMICOLON more_statement ENDLOOP WHILE bool_expr

    BEGINLOOP  shift, and go to state 58


State 36

   16 statement: CONTINUE .

    $default  reduce using rule 16 (statement)


State 37

   15 statement: READ . var var_comma

    ID  shift, and go to state 32

    var  go to state 59


State 38

   17 statement: RETURN . expression

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 60
    SUB       shift, and go to state 46

    expression           go to state 61
    multiplicative_expr  go to state 55
    term                 go to state 56


State 39

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS declaration SEMICOLON END_PARAMS BEGIN_LOCALS declaration SEMICOLON END_LOCALS BEGIN_BODY statement . SEMICOLON END_BODY

    SEMICOLON  shift, and go to state 62


State 40

   11 statement: var . ASSIGN

    ASSIGN  shift, and go to state 63


State 41

   59 more_var: L_BRAC . expression R_BRAC

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 60
    SUB       shift, and go to state 46

    expression           go to state 64
    multiplicative_expr  go to state 55
    term                 go to state 56


State 42

   57 var: ID more_var .

    $default  reduce using rule 57 (var)


State 43

   48 term: NUMBER .

    $default  reduce using rule 48 (term)


State 44

   50 term: ID . L_PARENT term_expr term_comma R_PARENT

    L_PARENT  shift, and go to state 65


State 45

   31 more_relation_expr: L_PARENT . bool_expr R_PARENT
   49 term: L_PARENT . expression R_PARENT

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 45
    SUB       shift, and go to state 46
    NOT       shift, and go to state 47
    TRUE      shift, and go to state 48
    FALSE     shift, and go to state 49

    bool_expr            go to state 66
    relation_and_expr    go to state 51
    relation_expr        go to state 52
    more_relation_expr   go to state 53
    expression           go to state 67
    multiplicative_expr  go to state 55
    term                 go to state 56


State 46

   47 term: SUB . var

    ID  shift, and go to state 32

    var  go to state 68


State 47

   26 relation_expr: NOT . more_relation_expr

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 45
    SUB       shift, and go to state 46
    TRUE      shift, and go to state 48
    FALSE     shift, and go to state 49

    more_relation_expr   go to state 69
    expression           go to state 54
    multiplicative_expr  go to state 55
    term                 go to state 56


State 48

   29 more_relation_expr: TRUE .

    $default  reduce using rule 29 (more_relation_expr)


State 49

   30 more_relation_expr: FALSE .

    $default  reduce using rule 30 (more_relation_expr)


State 50

   12 statement: IF bool_expr . THEN statement SEMICOLON more_statement else ENDIF

    THEN  shift, and go to state 70


State 51

   20 bool_expr: relation_and_expr . more_bool_expr

    OR  shift, and go to state 71

    $default  reduce using rule 22 (more_bool_expr)

    more_bool_expr  go to state 72


State 52

   21 relation_and_expr: relation_expr . more_relation_and_expr

    AND  shift, and go to state 73

    $default  reduce using rule 24 (more_relation_and_expr)

    more_relation_and_expr  go to state 74


State 53

   27 relation_expr: more_relation_expr .

    $default  reduce using rule 27 (relation_expr)


State 54

   28 more_relation_expr: expression . compare expression

    LT   shift, and go to state 75
    LTE  shift, and go to state 76
    GT   shift, and go to state 77
    GTE  shift, and go to state 78
    EQ   shift, and go to state 79
    NEQ  shift, and go to state 80

    compare  go to state 81


State 55

   32 expression: multiplicative_expr . more_expression

    SUB  shift, and go to state 82
    ADD  shift, and go to state 83

    $default  reduce using rule 39 (more_expression)

    more_expression  go to state 84


State 56

   42 multiplicative_expr: term . more_multiplicative_expr

    TIMES  shift, and go to state 85
    DIV    shift, and go to state 86
    MOD    shift, and go to state 87

    $default  reduce using rule 43 (more_multiplicative_expr)

    more_multiplicative_expr  go to state 88


State 57

   13 statement: WHILE bool_expr . BEGINLOOP statement SEMICOLON more_statement ENDLOOP

    BEGINLOOP  shift, and go to state 89


State 58

   14 statement: DO BEGINLOOP . statement SEMICOLON more_statement ENDLOOP WHILE bool_expr

    ID        shift, and go to state 32
    IF        shift, and go to state 33
    WHILE     shift, and go to state 34
    DO        shift, and go to state 35
    CONTINUE  shift, and go to state 36
    READ      shift, and go to state 37
    RETURN    shift, and go to state 38

    $default  reduce using rule 10 (statement)

    statement  go to state 90
    var        go to state 40


State 59

   15 statement: READ var . var_comma

    COMMA  shift, and go to state 91

    $default  reduce using rule 60 (var_comma)

    var_comma  go to state 92


State 60

   49 term: L_PARENT . expression R_PARENT

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 60
    SUB       shift, and go to state 46

    expression           go to state 93
    multiplicative_expr  go to state 55
    term                 go to state 56


State 61

   17 statement: RETURN expression .

    $default  reduce using rule 17 (statement)


State 62

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS declaration SEMICOLON END_PARAMS BEGIN_LOCALS declaration SEMICOLON END_LOCALS BEGIN_BODY statement SEMICOLON . END_BODY

    END_BODY  shift, and go to state 94


State 63

   11 statement: var ASSIGN .

    $default  reduce using rule 11 (statement)


State 64

   59 more_var: L_BRAC expression . R_BRAC

    R_BRAC  shift, and go to state 95


State 65

   50 term: ID L_PARENT . term_expr term_comma R_PARENT

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 60
    SUB       shift, and go to state 46

    $default  reduce using rule 51 (term_expr)

    expression           go to state 96
    multiplicative_expr  go to state 55
    term                 go to state 56
    term_expr            go to state 97


State 66

   31 more_relation_expr: L_PARENT bool_expr . R_PARENT

    R_PARENT  shift, and go to state 98


State 67

   28 more_relation_expr: expression . compare expression
   49 term: L_PARENT expression . R_PARENT

    R_PARENT  shift, and go to state 99
    LT        shift, and go to state 75
    LTE       shift, and go to state 76
    GT        shift, and go to state 77
    GTE       shift, and go to state 78
    EQ        shift, and go to state 79
    NEQ       shift, and go to state 80

    compare  go to state 81


State 68

   47 term: SUB var .

    $default  reduce using rule 47 (term)


State 69

   26 relation_expr: NOT more_relation_expr .

    $default  reduce using rule 26 (relation_expr)


State 70

   12 statement: IF bool_expr THEN . statement SEMICOLON more_statement else ENDIF

    ID        shift, and go to state 32
    IF        shift, and go to state 33
    WHILE     shift, and go to state 34
    DO        shift, and go to state 35
    CONTINUE  shift, and go to state 36
    READ      shift, and go to state 37
    RETURN    shift, and go to state 38

    $default  reduce using rule 10 (statement)

    statement  go to state 100
    var        go to state 40


State 71

   23 more_bool_expr: OR . relation_and_expr more_bool_expr

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 45
    SUB       shift, and go to state 46
    NOT       shift, and go to state 47
    TRUE      shift, and go to state 48
    FALSE     shift, and go to state 49

    relation_and_expr    go to state 101
    relation_expr        go to state 52
    more_relation_expr   go to state 53
    expression           go to state 54
    multiplicative_expr  go to state 55
    term                 go to state 56


State 72

   20 bool_expr: relation_and_expr more_bool_expr .

    $default  reduce using rule 20 (bool_expr)


State 73

   25 more_relation_and_expr: AND . relation_expr more_relation_and_expr

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 45
    SUB       shift, and go to state 46
    NOT       shift, and go to state 47
    TRUE      shift, and go to state 48
    FALSE     shift, and go to state 49

    relation_expr        go to state 102
    more_relation_expr   go to state 53
    expression           go to state 54
    multiplicative_expr  go to state 55
    term                 go to state 56


State 74

   21 relation_and_expr: relation_expr more_relation_and_expr .

    $default  reduce using rule 21 (relation_and_expr)


State 75

   35 compare: LT .

    $default  reduce using rule 35 (compare)


State 76

   37 compare: LTE .

    $default  reduce using rule 37 (compare)


State 77

   36 compare: GT .

    $default  reduce using rule 36 (compare)


State 78

   38 compare: GTE .

    $default  reduce using rule 38 (compare)


State 79

   33 compare: EQ .

    $default  reduce using rule 33 (compare)


State 80

   34 compare: NEQ .

    $default  reduce using rule 34 (compare)


State 81

   28 more_relation_expr: expression compare . expression

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 60
    SUB       shift, and go to state 46

    expression           go to state 103
    multiplicative_expr  go to state 55
    term                 go to state 56


State 82

   41 more_expression: SUB . multiplicative_expr more_expression

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 60
    SUB       shift, and go to state 46

    multiplicative_expr  go to state 104
    term                 go to state 56


State 83

   40 more_expression: ADD . multiplicative_expr more_expression

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 60
    SUB       shift, and go to state 46

    multiplicative_expr  go to state 105
    term                 go to state 56


State 84

   32 expression: multiplicative_expr more_expression .

    $default  reduce using rule 32 (expression)


State 85

   44 more_multiplicative_expr: TIMES . term more_multiplicative_expr

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 60
    SUB       shift, and go to state 46

    term  go to state 106


State 86

   45 more_multiplicative_expr: DIV . term more_multiplicative_expr

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 60
    SUB       shift, and go to state 46

    term  go to state 107


State 87

   46 more_multiplicative_expr: MOD . term more_multiplicative_expr

    NUMBER    shift, and go to state 43
    ID        shift, and go to state 44
    L_PARENT  shift, and go to state 60
    SUB       shift, and go to state 46

    term  go to state 108


State 88

   42 multiplicative_expr: term more_multiplicative_expr .

    $default  reduce using rule 42 (multiplicative_expr)


State 89

   13 statement: WHILE bool_expr BEGINLOOP . statement SEMICOLON more_statement ENDLOOP

    ID        shift, and go to state 32
    IF        shift, and go to state 33
    WHILE     shift, and go to state 34
    DO        shift, and go to state 35
    CONTINUE  shift, and go to state 36
    READ      shift, and go to state 37
    RETURN    shift, and go to state 38

    $default  reduce using rule 10 (statement)

    statement  go to state 109
    var        go to state 40


State 90

   14 statement: DO BEGINLOOP statement . SEMICOLON more_statement ENDLOOP WHILE bool_expr

    SEMICOLON  shift, and go to state 110


State 91

   61 var_comma: COMMA . var var_comma

    ID  shift, and go to state 32

    var  go to state 111


State 92

   15 statement: READ var var_comma .

    $default  reduce using rule 15 (statement)


State 93

   49 term: L_PARENT expression . R_PARENT

    R_PARENT  shift, and go to state 99


State 94

    3 function: FUNCTION ID SEMICOLON BEGIN_PARAMS declaration SEMICOLON END_PARAMS BEGIN_LOCALS declaration SEMICOLON END_LOCALS BEGIN_BODY statement SEMICOLON END_BODY .

    $default  reduce using rule 3 (function)


State 95

   59 more_var: L_BRAC expression R_BRAC .

    $default  reduce using rule 59 (more_var)


State 96

   52 term_expr: expression .

    $default  reduce using rule 52 (term_expr)


State 97

   50 term: ID L_PARENT term_expr . term_comma R_PARENT

    COMMA  shift, and go to state 112

    $default  reduce using rule 53 (term_comma)

    term_comma  go to state 113


State 98

   31 more_relation_expr: L_PARENT bool_expr R_PARENT .

    $default  reduce using rule 31 (more_relation_expr)


State 99

   49 term: L_PARENT expression R_PARENT .

    $default  reduce using rule 49 (term)


State 100

   12 statement: IF bool_expr THEN statement . SEMICOLON more_statement else ENDIF

    SEMICOLON  shift, and go to state 114


State 101

   23 more_bool_expr: OR relation_and_expr . more_bool_expr

    OR  shift, and go to state 71

    $default  reduce using rule 22 (more_bool_expr)

    more_bool_expr  go to state 115


State 102

   25 more_relation_and_expr: AND relation_expr . more_relation_and_expr

    AND  shift, and go to state 73

    $default  reduce using rule 24 (more_relation_and_expr)

    more_relation_and_expr  go to state 116


State 103

   28 more_relation_expr: expression compare expression .

    $default  reduce using rule 28 (more_relation_expr)


State 104

   41 more_expression: SUB multiplicative_expr . more_expression

    SUB  shift, and go to state 82
    ADD  shift, and go to state 83

    $default  reduce using rule 39 (more_expression)

    more_expression  go to state 117


State 105

   40 more_expression: ADD multiplicative_expr . more_expression

    SUB  shift, and go to state 82
    ADD  shift, and go to state 83

    $default  reduce using rule 39 (more_expression)

    more_expression  go to state 118


State 106

   44 more_multiplicative_expr: TIMES term . more_multiplicative_expr

    TIMES  shift, and go to state 85
    DIV    shift, and go to state 86
    MOD    shift, and go to state 87

    $default  reduce using rule 43 (more_multiplicative_expr)

    more_multiplicative_expr  go to state 119


State 107

   45 more_multiplicative_expr: DIV term . more_multiplicative_expr

    TIMES  shift, and go to state 85
    DIV    shift, and go to state 86
    MOD    shift, and go to state 87

    $default  reduce using rule 43 (more_multiplicative_expr)

    more_multiplicative_expr  go to state 120


State 108
